--- a/index.html
+++ b/index.html
@@ -29,7 +29,25 @@
         </div>
     </div>
     <div class="info">
-
+        <h2>Some random information.</h2>
+        <div class="img-container">
+            <div class="card">
+                <div class="img"></div>
+                <p class="img-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="img"></div>
+                <p class="img-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="img"></div>
+                <p class="img-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="img"></div>
+                <p class="img-text">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
     <div class="quote">
 
