--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
         <p class="quote-author"> -Thor, God of Thunder</p>
     </div>
     <div class="action">
-
+        <div class="action-text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="action-button">Sign up</div>
     </div>
     <div class="footer">
 
