--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="action-button">Sign up</div>
     </div>
     <div class="footer">
-
+        Copyright © The Odin Project 2021
     </div>
 </body>
 </html>
